samples/_failures_safe/1761501102_88761b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c55437f7.c: In function ‘main’:
./samples/SAFE/__tmp_c55437f7.c:175:13: error: expected declaration or statement at end of input
  175 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_c55437f7.c:175:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c55437f7.c:175:13: error: expected declaration or statement at end of input
